# data_lab

./: .env.example  .gitignore  README.md  justfile
.github/workflows/: ci.yml
data/schemas/: example_table.sql
data/seed/: example_records.csv
infra/: README.md
python/: pyproject.toml
python/data_lab/: __init__.py
python/data_lab/connectors/: __init__.py  s3.py  snowflake.py
python/data_lab/utils/: logging.py
python/lambdas/example_trigger/: handler.py  requirements.txt
python/tests/: test_imports.py  test_logging.py
rust/: Cargo.toml
rust/crates/cli/: Cargo.toml
rust/crates/cli/src/: main.rs
rust/crates/connectors/: Cargo.toml
rust/crates/connectors/src/: s3.rs
rust/crates/data_lab_core/: Cargo.toml
rust/crates/data_lab_core/src/: error.rs  lib.rs  types.rs
