[project]
name = "data-lab"
version = "0.1.0"
description = "Python connectors, Lambda handlers, and notebooks for data_lab"
requires-python = ">=3.12"

dependencies = [
    # AWS
    "boto3>=1.34",
    "botocore>=1.34",
    # Snowflake
    "snowflake-connector-python>=3.6",
    # Data
    "pandas>=2.2",
    "pyarrow>=15.0",
    # Config / env
    "python-dotenv>=1.0",
    # Logging
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
    "mypy>=1.10",
    "boto3-stubs[s3,lambda,events]",
    "types-python-dotenv",
    "ipykernel",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
