[workspace]
resolver = "2"
members = [
    "crates/data_lab_core",
    "crates/connectors",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ben"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# AWS SDK
aws-config = "1"
aws-sdk-s3 = "1"

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
